# todo

./: .gitignore  .mise.toml  README.md  pyproject.toml
todo/: .dockerignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.prod.sh  fly.toml  nginx.conf  requirements.txt
todo/core/: forms.py  models.py  urls.py  views.py
todo/core/migrations/: 0001_initial.py  0002_alter_todo_notes.py  0003_alter_todo_status.py
todo/core/templates/: about.html  base.html  base_header.html  login.html  signup.html  todo_form.html  todo_list.html
todo/static/: core.css
todo/tests/: test_forms.py  test_models.py  test_views.py
todo/todo/: settings.py
todo/todo/settings/: development.py
