[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datastar>=0.0.8",
    "datastar-py>=0.4.3",
    "dj-database-url>=2.3.0",
    "django>=5.1.7",
    "django-template-partials>=24.4",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "whitenoise>=6.9.0",
]
